--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
-        "target": "ES2022",
+        "target": "ESNext",
         "outDir": "./dist/js/",
         "noEmitOnError": true
     },
     "include": [
-        "./src/**/*"
+        "./src/**/*.ts"
     ]
 }
